# mc646-2025-atividade4

./: .gitignore  .mutmut-cache  README.md  generate_graph.py  pyproject.toml
cfg/: add_node_numbers.py  energy_cfg.dot  flight_cfg  flight_cfg.dot  fraud_cfg.dot  grafo_book_flight  grafo_book_flight.dot  grafo_check_for_fraud  grafo_check_for_fraud.dot  grafo_manage_energy  grafo_manage_energy.dot
html/: index.html
html/src/energy/: EnergyManagementSystem.py.html
html/src/flight/: FlightBookingSystem.py.html
html/src/fraud/: FraudDetectionSystem.py.html
html_inicial/: index.html
html_inicial/src/energy/: EnergyManagementResult.py.html  EnergyManagementSystem.py.html
html_inicial/src/flight/: FlightBookingSystem.py.html
html_inicial/src/fraud/: FraudDetectionSystem.py.html
mutants/: mutmut-stats.json  pyproject.toml
mutants/src/energy/: DeviceSchedule.py  EnergyManagementResult.py  EnergyManagementSystem.py
mutants/src/flight/: BookingResult.py  FlightBookingSystem.py
mutants/src/fraud/: FraudCheckResult.py  FraudDetectionSystem.py  Transaction.py
src/energy/: DeviceSchedule.py  EnergyManagementResult.py  EnergyManagementSystem.py
src/flight/: FlightBookingSystem.py
src/fraud/: FraudDetectionSystem.py
tests/: test_device_schedule.py  test_energy_management.py  test_energy_management_system.py  test_flight_booking.py  test_fraud_detection.py
tests_final/: test_device_schedule.py  test_flight_booking.py  test_fraud_detection.py
tests_inicial/: test_energy_management.py  test_flight_booking.py
